# MotorManagerService

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: device_interface.md
driver/ftd2xxlib/: WinTypes.h  ftd2xx.h
include/: dataframe.hpp
include/core/: user_core.hpp
include/module_rs232/: ft232rl.hpp  i_module.hpp
include/service_host/: exceptions.hpp  i_core.hpp  i_socket.hpp  judge.hpp  network_serializer.hpp  server.hpp  socket.hpp  utils.hpp
interface/: QUICKSTART.md  README.md  main.py  requirements.txt  serverconnector.py  serverconnector_old.py  start_system.sh  test_interface.py
interface/static/css/: style.css
interface/static/js/: app.js
interface/templates/: index.html
mock-mcu/: CMakeLists.txt  README.md  USAGE.md
mock-mcu/include/: mock_mcu.hpp  protocol_handler.hpp
mock-mcu/src/: main.cpp  mock_mcu.cpp  protocol_handler.cpp
source/: CMakeLists.txt  dataframe.hpp
source/ModuleFT232RL/: ModuleFT232RL.hpp
source/MotorControlService/: MotorControlServiceCore.cpp  MotorControlServiceCore.hpp  main.cpp
source/MotorControlService/tests/: CMakeLists.txt  MotorControlServiceCore_tests.cpp
source/UniversalServerUnits/: Exceptions.cpp  Exceptions.hpp  SocketInterface.hpp  SocketWrapper.cpp  SocketWrapper.hpp  UniversalServer.cpp  UniversalServer.hpp  UniversalServerCore.hpp  UniversalServerUnits.cpp  UniversalServerUnits.hpp  judge.hpp
source/UniversalServerUnits/tests_Exceptions/: Exceptions_tests.cpp
source/UniversalServerUnits/tests_UniversalServerUnits_json/: UniversalServerUnits_json_tests.cpp
source/UniversalServerUnits/tests_UniversalServerUnits_readFromSocket/: UniversalServerUnits_readFromSocket_tests.cpp
source/UniversalServerUnits/tests_UniversalServerUnits_writeToSocket/: UniversalServerUnits_writeToSocket_tests.cpp
source/UserInterface/: main.py
source/UserInterface/static/css/: style.css
source/UserInterface/static/js/: script.js  speedUpdate.js
source/core/: main.cpp  user_core.cpp
source/module_rs232/: ft232rl.cpp  ft232rl_main.cpp
source/service_host/: exceptions.cpp  network_serializer.cpp  server.cpp  socket.cpp  utils.cpp
test/: CMakeLists.txt
test/unit/core/: CMakeLists.txt
test/unit/core/user_core/: CMakeLists.txt  MotorControlServiceCore_tests.cpp  deserialize_manager_unit.cpp  disconnect_unit.cpp  list_unit.cpp  mocks.hpp  moving_mcu_errors_unit.cpp  moving_protocol_unit.cpp  moving_unit.cpp  process_unit.cpp  reconnect_unit.cpp  user_core_unit.cpp  version_unit.cpp
test/unit/module_rs232/: CMakeLists.txt
test/unit/module_rs232/ft232rl/: CMakeLists.txt  ft232rl_unit.cpp
test/unit/service_host/: CMakeLists.txt
test/unit/service_host/exceptions/: CMakeLists.txt  errorreadingfromsocket.cpp  exceptioncopy.cpp  exceptions_errorwritingtosocket.cpp  exceptions_notcorrectmessagetosend.cpp  myexception.cpp
test/unit/service_host/network_serializer/: CMakeLists.txt  UniversalServerUnits_readFromSocket_tests.cpp  UniversalServerUnits_split_tests.cpp  UniversalServerUnits_writeToSocket_tests.cpp  json_unit.cpp  readfromsocket.cpp  split_unit.cpp  writetosocket.cpp
test/unit/service_host/server/: CMakeLists.txt  UniversalServerUnits_server_tests.cpp  server_unit.cpp
test/unit/service_host/utils/: CMakeLists.txt  utils_tests.cpp  utils_unit.cpp
